# intelligent-grading-platform

./: .env  .env.example  .gitignore  API测试报告.md  README.md  check_all_tables.py  check_id10_status.html  check_stats_consistency.html  comprehensive_task_toggle_test.py  create_error_test_data.py  create_test_study_plan.py  current_plan.json  debug_556199.html  debug_964020.html  debug_accuracy_rate.py  debug_api.py  debug_api_response.html  debug_check_database.py  debug_consistency.html  debug_consistent_user.py  debug_dashboard_generation.py  debug_data_flow.html  debug_database_direct.py  debug_english_first.html  debug_frontend_task_toggle.py  debug_homework_423971.html  debug_homework_api.py  debug_homework_result.html  debug_id6.html  debug_image_upload.html  debug_pages.html  debug_review_sync.html  debug_stats_deep.html  debug_stats_fluctuation.html  debug_study_plan.py  debug_study_plan_database.py  debug_study_plan_tasks.py  debug_subject_mapping.py  debug_user13_study_plan.py  debug_user_comparison.py  (+9 more)
backend/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  app.db  deleted_errors.pkl  demo_server.py  docker-compose.yml  main.py  pyproject.toml  requirements-basic.txt  requirements.txt  simple_start.py  start-server.bat  start.py  test.db  test_create_child.py  test_routes.py
backend/alembic/: env.py
backend/app/: main.py
backend/docs/: ADMIN_GUIDE.md  API_DOCUMENTATION.md  USER_GUIDE.md
backend/gateway/: Dockerfile  main.py  middleware.py
backend/requirements/: chinese.txt  common.txt  english.txt  math.txt
frontend/: App.vue  (+82 more)
(+113 files in other folders)
